--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <h2>Hangman</h2>
+      <div id="dashes"></div>
+      <div id="keyboard"></div>
+      <div id="guessedLetters"> </div>
+      <div id="gameOver"></div>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
