--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="dashes"></div>
       <div id="keyboard"></div>
       <div id="guessedLetters"> </div>
-      <div id="gameOver"></div>
+      <div id="gameLost"></div>
     </div>
     <script src="./index.js"></script>
   </body>
